assets/css/footer.css
body {
    margin: 0;
}

footer {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
    margin-top: 2rem;
    margin-bottom: 2rem;
}

@media screen and (min-width: 1280px) {
    footer {
        padding-left: 3rem;
        padding-right: 3rem;
        margin-top: 4.5rem;
        margin-bottom: 4.5rem;
        max-width: calc(83.33333333333334% - 6rem);
    }

    .footer-ul li {
        -webkit-flex: 0 0 calc(25% - 0.75rem);
        -ms-flex: 0 0 calc(25% - 0.75rem);
        flex: 0 0 calc(25% - 0.75rem);
    }
}

@media screen and (min-width: 960px) {
    footer {
        padding-left: 2rem;
        padding-right: 2rem;
        margin-top: 4.5rem;
        margin-bottom: 4.5rem;
    }

    .footer-ul li {
        -webkit-flex: 0 0 calc(25% - 0.75rem);
        -ms-flex: 0 0 calc(25% - 0.75rem);
        flex: 0 0 calc(25% - 0.75rem);
    }
}

@media screen and (min-width: 600px) {
    footer {
        padding-left: 2rem;
        padding-right: 2rem;
        margin-top: 2rem;
        margin-bottom: 2rem;
    }

    .footer-ul li {
        -webkit-flex: 0 0 calc(50% - 0.75rem);
        -ms-flex: 0 0 calc(50% - 0.75rem);
        flex: 0 0 calc(50% - 0.75rem);
    }
}

